--- a/Module 5/book-examples/tables.html
+++ b/Module 5/book-examples/tables.html
@@ -5,7 +5,7 @@
     <title>Html Elements</title>
 </head>
 <body>
-<table>
+<table border=1>
     <tr>
         <td>Emri</td>    <th>Mbiemri</th><th>Numri i telit</th><th>profesioni</th>
         </tr>
