--- a/Module 7/book-examples/form.html
+++ b/Module 7/book-examples/form.html
@@ -20,6 +20,21 @@
         <br>
         <lable for="hobbies">Hobbies</lable>
         <input type="checkbox" name="hobbies" value="voleyball">
+        <br>
+        <label for="number">number</label>
+        <input type="number" readonly value="4">
+        <label for="date">
+            <input type="date">
+            <label for="range">
+                <input type="range">
+                <label for="file">
+                    <input type="file">
+                    <label for="imge">
+                        <input type="imge">
+                        <label for="search">
+                            <input type="search">
+                            <input type="text" placeholder="name" required maxlength="2"/>
+        </label>
         <input type="submit"/>
     </form>
 </body>
