--- a/Module 11/book-examples/CSS.html
+++ b/Module 11/book-examples/CSS.html
@@ -5,9 +5,10 @@
     <title>title</title>
     <style>
         .slider-paragraph{
-            background-color: blue;
+            background-color:blue;
             padding: 20px;
             color:white;
+            border:5px solid blueviolet;
         }
         span{
             margin-top:50px;
@@ -20,6 +21,6 @@
 <body>
 <p>I am Donart.</p>
 <p class="slider-paragraph">Test</p>
-<span>span</span>
+<span class="border-solid">span</span>
 </body>
 </html>
