--- a/Module 12/book-examples/text style.html
+++ b/Module 12/book-examples/text style.html
@@ -3,20 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
-    <style>
-    .text-style{
-        color:brown;
-        letter-spacing:10px;
-        word-spacing:15px;
-        text-decoration:underline;
-                text-align:center
-    }
-                </style>
+    <link rel="stylesheet" href="./text style.css ">
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
                  
     </head>
     <body>
-        <h2 class="text-style"
-    heading >juyhgtysrzwfrsxt2dxutredjuxf,jedfrx,2uyrefd,uyrxf,u</h2>
-
+        <h2 class="text-style">juyhgtysrzwfrsxt2dxutredjuxf,jedfrx,2uyrefd,uyrxf,unjokfhslkovfhjfvhnbiksdhvkashrgfioahgoeurfgpjargoqewjhrfgfdsj</h2>
+<i class="material-icons">person</i>
     </body>
     </html>
