--- a/Module 15/book-examples/navigation.html
+++ b/Module 15/book-examples/navigation.html
@@ -1,17 +1,47 @@
-<!DOCTYPE html>
+
 <html>
 <head>
+    <style> 
+    body{
+        margin: 0;
+    }
+        ul{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background: #333;
+            overflow: hidden;
+            display: inline-block;
+            height: 100%;
+            width: 350px;
+        }
+        ul li{
+            font-weight: 900 !important;
+            
+        }
+        ul li a{
+            display: block;
+            padding: 15px;
+            text-decoration: none;
+            color: white;
+        }
+        ul li a:hover{
+            background-color:#111;
+        }
+        .active{
+            background-color: #4caf50;
+            color: white;
+        }
+    </style>
     <meta charset="UTF-8" />
     <title>title</title>
     </head>
     <body>
-<div>
-    <ul class="module14">
-        <li>home</li>
-        <li>contact</li>
-        <li>srvices</li>
-        <li>about us</li>
+    <ul>
+        <li><a href="#home">home</a></li>
+        <li><a href="#news">news</a></li>
+        <li><a href="#contact" class="active">contact</a></li>
+        <li><a href="#about">about me </a></li>
     </ul>
-</div>
     </body>
 </html>
