--- a/module 20/book-examples/psdTowebsite.html
+++ b/module 20/book-examples/psdTowebsite.html
@@ -34,5 +34,37 @@
        </div>
 
     </section>
+    <section class="services">
+        <h2>SERVICES WE PROVIDE</h2>
+        <p>We are working with both individuals and businesses from all over the globe to create awesome websites and applications.</p>
+        <div class="service-list">
+            <div class="service"><i class="fas fa-flag"></i><h3>Branding</h3></div>
+            <div class="service"><i class="fas fa-paint-brush"></i><h3>Design</h3></div>
+            <div class="service"><i class="fas fa-code"></i><h3>Development</h3></div>
+            <div class="service"><i class="fas fa-rocket"></i><h3>Rocket Science</h3></div>
+        </div>
+    </section>
+    <section class="team">
+        <h2>MEET OUR BEAUTIFUL TEAM</h2>
+        <p>We are a small-team of designers and developers,who help brands with big ideas.</p>
+        <div class="team-members">
+            <div class="member"><img src="img1.jpg"><h3>Anne Hathaway</h3><p>CEO / Marketing Guru</p></div>
+            <div class="member"><img src="img2.jpg"><h3>Kate Upton</h3><p>Creative Director</p></div>
+            <div class="member"><img src="img3.jpg"><h3>Olivia Wilde</h3><p>Lead Designer</p></div>
+            <div class="member"><img src="img4.jpg"><h3>Ashley Greene</h3><p>SEO / Developer</p>
+        </div>
+    </section>
+    <section class="contact">
+        <h2>GET IN TOUCH</h2>
+        <form>
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea placeholder="Your Message"></textarea>
+            <button type="submit">SEND MESSAGE</button>
+        </form>
+    </section>
+    <footer>
+        <p>Follow us on social media</p>
+    </footer>
 </body>
 </html>
