--- a/scrum/home.html
+++ b/scrum/home.html
@@ -11,29 +11,12 @@
     <h1>My portofolio</h1>
     <nav>
         <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+                    <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     </header>
-    <section id="about">
-        <h2>About me</h2>
-        <p>Hi I am Donart:A passionate developer</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li>Project 1:A community garden initiative that promotes sustainable agriculture, local food production,
-                 and environmental education by bringing neighbors together to grow fresh, organic produce in shared spaces.</li>
-                 <li>Project 2:A mobile app that helps users track their carbon footprint, offering tips and rewards for reducing waste,
-                     conserving energy, and adopting eco-friendly habits in daily life.</li>
-        </ul>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
-        </section>
         <footer>&copy; 2025 [Your Name]. All rights reserved.</footer>
 </body>
 </html>
