--- a/scrum/contact.html
+++ b/scrum/contact.html
@@ -9,13 +9,12 @@
 <body>
     <nav>
         <ul>
+          <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section id="contact">
-        <h2>Contact</h2>
       <form action="/submit-form" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name">
@@ -29,5 +28,6 @@
         <button type="#submit">Submit</button>
       </form>
         </section>
+        <footer>&copy; 2025 [Your Name]. All rights reserved.</footer>
 </body>
 </html>
