--- a/scrum/projects.html
+++ b/scrum/projects.html
@@ -9,15 +9,13 @@
 <body>
     <nav>
         <ul>
-                    <li><a href="about.html">About Me</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section id="projects">
-        <header>
-        <h2>Projects</h2>
-        </header>
+        
         <ul>
             <h1>Project 1:A community garden initiative that promotes sustainable agriculture, local food production,
                  and environmental education by bringing neighbors together to grow fresh, organic produce in shared spaces.</h1>
